force-app/main/default/objects/Condominium__c/Condominium__c.object-meta.xml
<CustomObject>
    <label>Condominium</label>
    <nameField>
        <label>Condominium Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condominiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>