force-app/main/default/objects/Condominium__c/fields/Janitor__c.field-meta.xml
<CustomField>
    <fullName>Janitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Janitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Condominiums (Janitor)</relationshipLabel>
    <relationshipName>Condominiums1</relationshipName>
    <type>Lookup</type>
</CustomField>