force-app/main/default/objects/Condominium__c/fields/Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Owned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owned By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Condominiums</relationshipLabel>
    <relationshipName>Condominiums</relationshipName>
    <type>Lookup</type>
</CustomField>