force-app/main/default/objects/Condominium__c/fields/Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Condominiums</relationshipLabel>
    <relationshipName>Condominiums</relationshipName>
    <type>Lookup</type>
</CustomField>