force-app/main/default/objects/Condominium__c/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Condominiums</relationshipName>
    <type>Lookup</type>
</CustomField>