force-app/main/default/objects/Condominium__c/fields/Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Count__c</fullName>
    <label>Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>